--- a/src/www/account/connect/delete-stripe-account.html
+++ b/src/www/account/connect/delete-stripe-account.html
@@ -15,6 +15,7 @@
       <p translate="yes">The Stripe account will be deleted immediately and cannot be recovered.</p>
       <div id="message-container"></div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/delete-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <button id="submit-button" class="button" translate="yes">Delete</button>
       </form>
     </div>
@@ -26,6 +27,16 @@
     <template id="unknown-error">
       <div class="error message" translate="yes">
         Error! An error occurred deleting the Stripe account
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
