--- a/src/www/account/connect/stripe-account.html
+++ b/src/www/account/connect/stripe-account.html
@@ -184,16 +184,16 @@
       <span translate="yes">Pending submission</span>
     </template>
     <template id="rejected.fraud">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.terms">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.listed">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.other">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="fields_needed">
       <span>More information is required.</span>
@@ -205,7 +205,7 @@
       <span translate="yes">Under review by Stripe</span>
     </template>
     <template id="disabled">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="requirements.past_due">
       <span translate="yes">Requires additional information</span>
