--- a/src/www/account/connect/submit-company-directors.html
+++ b/src/www/account/connect/submit-company-directors.html
@@ -29,6 +29,7 @@
         </div>
       </div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/submit-company-directors?stripeid=${stripeAccount.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <div class="form-buttons">
           <button id="submit-button" class="button" translate="yes">Submit directors</button>
         </div>
@@ -55,6 +56,16 @@
     <template id="unknown-error">
       <div class="error message" translate="yes">
         Error! An error occurred submitting the directors
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
