--- a/src/www/administrator/connect/delete-stripe-account.html
+++ b/src/www/administrator/connect/delete-stripe-account.html
@@ -14,6 +14,7 @@
       <h1 translate="yes">Delete Stripe account</h1>
       <div id="message-container"></div>
       <form id="submit-form" method="post" class="input-form" action="/administrator/connect/delete-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <button id="submit-button" class="button" translate="yes">Delete</button>
       </form>
     </div>
@@ -25,6 +26,16 @@
     <template id="unknown-error">
       <div class="error message" translate="yes">
         Error! An error occurred deleting the Stripe account
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
