--- a/src/www/administrator/connect/reject-stripe-account.html
+++ b/src/www/administrator/connect/reject-stripe-account.html
@@ -14,6 +14,7 @@
       <h1 translate="yes">Reject Stripe account</h1>
       <div id="message-container"></div>
       <form id="submit-form" method="post" class="input-form" action="/administrator/connect/reject-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <div class="input-fields">
           <label class="field-label" for="reason" translate="yes">Rejection reason</label>
           <div class="field">
@@ -72,20 +73,16 @@
       <span translate="yes">Pending submission</span>
     </template>
     <template id="rejected.fraud">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a
-          href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.terms">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a
-          href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.listed">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a
-          href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.other">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a
-          href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="fields_needed">
       <span translate="yes">More information is required</span>
@@ -97,8 +94,17 @@
       <span translate="yes">Under review by Stripe</span>
     </template>
     <template id="disabled">
-      <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a
-          href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
+      </div>
     </template>
   </body>
 </html>
