--- a/src/www/account/connect/create-stripe-account.html
+++ b/src/www/account/connect/create-stripe-account.html
@@ -15,6 +15,7 @@
       <p translate="yes">A completed registration allows you to receive revenue payouts through Stripe Connect.</p>
       <div id="message-container"></div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/create-stripe-account" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <div class="input-fields">
           <label class="field-label" for="individual" translate="yes">Account type</label>
           <div class="field">
@@ -58,6 +59,16 @@
     <template id="invalid-country">
       <div class="error message" translate="yes">
         Error! Invalid or missing country
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
