--- a/src/www/account/connect/edit-person.html
+++ b/src/www/account/connect/edit-person.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <form id="submit-form" enctype="multipart/form-data" method="post" class="input-form connect-form" action="/account/connect/edit-person?personid=${person.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <input type="hidden" id="stripe-publishable-key">
         <input type="hidden" name="token" id="token">
         <h1 translate="yes">Edit person</h1>
@@ -463,6 +464,16 @@
     <template id="invalid-address_kanji_postal_code">
       <div class="error message" translate="yes">
         Error! Invalid or missing Kanji personal address postal code
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
