--- a/src/www/account/connect/edit-stripe-account.html
+++ b/src/www/account/connect/edit-stripe-account.html
@@ -16,6 +16,7 @@
       <h1 translate="yes">Edit Stripe account</h1>
       <div id="message-container"></div>
       <form id="submit-form" enctype="multipart/form-data" method="POST" class="input-form connect-form" action="/account/connect/edit-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
+        <input type="hidden" name="csrf-token" />
         <input type="hidden" id="stripe-publishable-key" />
         <input type="hidden" name="token" id="token">
         <div id="business-profile-container">
@@ -729,6 +730,16 @@
     <template id="invalid-company_verification_document_back">
       <div class="error message" translate="yes">
         Error! Invalid or missing document back scan or photo
+      </div>
+    </template>
+    <template id="invalid-csrf-token">
+      <div class="error message" translate="yes">
+        Error! This form was not submitted correctly
+      </div>
+    </template>
+    <template id="invalid-xss-input">
+      <div class="error message" translate="yes">
+        Error! Invalid value(s) were posted to the server
       </div>
     </template>
   </body>
