--- a/src/www/administrator/connect/stripe-account.html
+++ b/src/www/administrator/connect/stripe-account.html
@@ -66,16 +66,16 @@
       <span translate="yes">Requires additional information</span>
     </template>
     <template id="rejected.fraud">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.terms">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.listed">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="rejected.other">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
     <template id="fields_needed">
       <span translate="yes">More information is required</span>
@@ -87,7 +87,7 @@
       <span translate="yes">Under review by Stripe</span>
     </template>
     <template id="disabled">
-      <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+      <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
   </body>
 </html>
